--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,27 @@
-[tool.poetry]
+[project]
 name = "vrc-world-crawler"
 version = "0.1.0"
-description = ""
-authors = ["shift <fantasy_world4423-git@yahoo.co.jp>"]
+description = "vrc world crawler"
+authors = [
+    {name = "shift"}
+]
+dependencies = [
+    "coverage>=7.5.3",
+    "freezegun>=1.5.1",
+    "httpx>=0.27.0",
+    "isort>=5.13.2",
+    "mock>=5.1.0",
+    "orjson>=3.10.3",
+    "pycodestyle>=2.11.1",
+    "ruff>=0.4.6",
+    "sqlalchemy>=2.0.30",
+]
 readme = "README.md"
+requires-python = ">= 3.12"
 
-[tool.poetry.dependencies]
-coverage = "^7.4.4"
-freezegun = "^1.4.0"
-httpx = "^0.24.1"
-isort = "^5.13.2"
-mock = "^5.1.0"
-orjson = "^3.10.1"
-pycodestyle = "^2.11.1"
-python = ">=3.12,<3.13"
-ruff = "^0.1.15"
-sqlalchemy = "^2.0.29"
-
-[tool.poetry.dev-dependencies]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.isort]
 line_length = 119
@@ -43,6 +47,12 @@ preview = true
 preview = true
 quote-style = "double"
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[tool.rye]
+managed = true
+dev-dependencies = []
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/vrc_world_crawler"]
