FetchedInfoテスト追加1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,11 @@ quote-style = "double"
 managed = true
 dev-dependencies = []
 
+[tool.rye.scripts]
+unittest = "python -m unittest"
+coverage_html = {chain = ["coverage run --source . -m unittest discover", "coverage html"]}
+copy_to_run = "./copy_to_run.bat"
+
 [tool.hatch.metadata]
 allow-direct-references = true
 
